app/assets/stylesheets/global.css.scss
@import "foundation_and_overrides";

body {
  background-color: #eee;
}

h1,h2,h3,h4,h5,h6 {
  font-family: 'Oswald', sans-serif;
}

h1 {
  font-size: 2.5em;
  letter-spacing: 1px;
  margin: 0 0 0 2.5em;
  padding: 0;
}

h2 {
  font-size: 2em;
  letter-spacing: 1px;
  margin-bottom: 20px;
}

a:link {
  text-decoration: underline;
}

// header
header {
  margin: 0;
  padding: 0;
}

header h1 {
  margin-left: .7em;
  margin-top: 0;
  padding: 0;
}

h1 img {
  max-width: none;
}

header {
  font-family: 'Oswald', serif;
  font-weight: bold;
}

// side nav

.side-nav {
  a:link {
    text-decoration: none;
  }
  margin-top: 15px;
  font-family: 'Oswald', serif;
  letter-spacing: 1px;
  li {
    margin-bottom: 25px;
  }
}

// main

main {
  margin-top: 15px;
}

#submenu {
  margin: -15px 0 20px 0;
}

.rating {
  color: purple;
  font-weight: bold;
}

.edit-link {
  font-size: .9em;
}

.movie-list {
  ul {
    padding: 0;
    margin: 0;
  }
  li {
    list-style-type: none;
    padding: 0;
    margin: 3px 0 0 0;
  }
}

.viewing-fields {
  margin-left: 30px;
}


// footer
footer {
  text-align: right;
  font-size: .8em;
  padding-right: 10px;
}

.debug {
  margin: 40px 0 0 0;
}

// media queries
@media #{$small-only} {
  .side-nav {
    margin-top: 5px;
    padding-top: 0;
    li {
      display: inline;
      padding-right: 5px;
    }
    li a {
      display: inline !important;
      border-right: 2px solid #000;
      padding: 0 5px 0 0;
    }
    li.last a {
      border: none;
    }
  }
}

